--- a/section/contacto.html
+++ b/section/contacto.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container-fluid">
             <div class="logo row">
-                <img class="col-6" src="../img/header logo 2.png" alt="logo-index">
+                <img class="col-6" src="../img/logo-header.png" alt="logo-index">
                 <h1 class="logo-nombre col-6">Natural Mystic </h1>
             </div>
             <nav class="row">
@@ -57,12 +57,14 @@
         
 <footer class="container">
     <div class="row">
-        <p class="col-12">Copyright © Info Cannabis 2023 Todos los derechos reservados.</p>
+        <p class="copyright col-12">Copyright © Natural Mystic 2023 Todos los derechos reservados.</p>
     </div>
-        <div class="row">
+        <div class="row redes">
             <div class="col-6">
-                <p>Facebook</p>
-                <p>Instagram</p>
+                <button class="btn--boton1">Facebook</button>
+            </div>
+            <div>
+                <button class="btn--boton2">Instagram</button>
             </div>   
         </div>
             <div class="col-6">
