--- a/section/metodos.html
+++ b/section/metodos.html
@@ -14,7 +14,7 @@
         <header>
             <div class="container-fluid">
                 <div class="logo row">
-                    <img class="col-6" src="../img/header logo 2.png" alt="logo-index">
+                    <img class="col-6" src="../img/logo-header.png" alt="logo-index">
                     <h1 class="logo-nombre col-6">Natural Mystic </h1>
                 </div>
                 <nav class="row">
@@ -29,8 +29,9 @@
             </div>
         </header>
     <!-- contenido -->
-        <h2>Metodos de cultivo</h2>
     <main>
+        <h2 class="titulo-metodos">Metodos de cultivo</h2>
+
         <h2>SOG</h2>
 
     <article>
@@ -47,7 +48,7 @@
                 El objetivo es conseguir grandes cogollos de pequeñas plantas que ocupen el total de nuestro espacio de cultivo. Al ser plantas de pequeña altura, la luz penetrará homogéneamente y podremos obtener muy buenos resultados.</P>
 
         <div>
-            <img src="../img/SOG.jpg" alt="">
+            <img class="img-sog" src="../img/SOG.jpg" alt="">
         </div>
 
         <h2>
@@ -64,7 +65,7 @@ El SCROG consiste en poner pocas plantas (de 4 a 8 por metro cuadrado) y dejar q
 El objetivo de esta técnica es sacar el mayor numero posible de cogollos de cada planta, haciendo que estas ramifiquen y moldeando las ramas manualmente para que aprovechen el máximo de luz.</P>
 
 <div>
-    <img src="../img/SCROG.jpg" alt="">
+    <img class="img-scrog" src="../img/SCROG.jpg" alt="">
 </div>
 
 <h2>
@@ -78,7 +79,7 @@ Está recomendado para cultivos en exterior, aunque de igual manera se puede apl
 
 La técnica es muy sencilla, esperaremos a que la planta tenga unos seis o siete nudos y con la ayuda de una cuerda o alambre, la doblaremos con cuidado hacia un lateral de la maceta. Conforme vaya creciendo, iremos orientando el tallo principal sobre si mismo, de forma que crezca realizando círculos sobre su propia base.</p>
 
-<img src="../img/LST.jpg" alt="">
+<img class="img-lst" src="../img/LST.jpg" alt="">
 
 </article>
     </main>
@@ -87,19 +88,20 @@ La técnica es muy sencilla, esperaremos a que la planta tenga unos seis o siete
 <!--  pie de pagina -->
 <footer class="container">
     <div class="row">
-        <p class="col-12">Copyright © Info Cannabis 2023 Todos los derechos reservados.</p>
+        <p class="copyright col-12">Copyright © Natural Mystic 2023 Todos los derechos reservados.</p>
     </div>
-
-    <div class="row">
-        <div class="col-6">
-            <p>Facebook</p>
-            <p>Instagram</p>
-        </div>   
-    </div>
-        <div class="col-6">
-                    <input type="text">
-                    <button class="botton">Suscribirse</button>
+        <div class="row redes">
+            <div class="col-6">
+                <button class="btn--boton1">Facebook</button>
+            </div>
+            <div>
+                <button class="btn--boton2">Instagram</button>
+            </div>   
         </div>
+            <div class="col-6">
+                <input type="text">
+                <button class="botton">Suscribirse</button>
+            </div>
 </footer>
 </body>
 </html>
