--- a/section/tienda.html
+++ b/section/tienda.html
@@ -14,7 +14,7 @@
         <header>
             <div class="container-fluid">
                 <div class="logo row">
-                    <img class="col-6" src="../img/header logo 2.png" alt="logo-index">
+                    <img class="col-6" src="../img/logo-header.png" alt="logo-index">
                     <h1 class="logo-nombre col-6">Natural Mystic </h1>
                 </div>
                 <nav class="row">
@@ -30,20 +30,10 @@
         </header>
         
 <!-- contenido -->
-        <div>
-            <h2>Cannabis Medicinal</h2>
-        </div>
         <main>
-            <article>
-                <div>
-                        <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit soluta hic magnam suscipit iusto, officiis illum neque dicta, deserunt ex perspiciatis. Quas repudiandae molestiae totam quisquam sit similique officia adipisci?</p>
-                </div>
-                <div>
-                    <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed possimus alias dolorum perspiciatis dolorem numquam cum illo quis nesciunt, beatae, qui repudiandae amet veritatis, tenetur suscipit quas iste! Porro, quam.</p>
-                </div>
-            </article>
+            <div>
+                <h2 class="titulo-tienda">Cannabis Medicinal</h2>
+            </div>
         </main>
 
         <section class="container">
@@ -52,7 +42,7 @@
             <div class="card-aceite col-xs-12 col-lg-4">
                 <h3>Aceite CBD</h3>
                 <img src="../img/Aceite-cbd card.jpg" alt="">
-                <h4>Lorem ipsum dolor sit amet.</h4>
+                <h4>Nuestro aceite CBD es una solución ideal para el alivio del dolor crónico, la inflamación intestinal o cutáneas, tratamiento de la ansiedad y depresión.</h4>
                 <h5>$1500</h5>
                 <div>
                     <button class="botton">Comprar</button>
@@ -61,7 +51,8 @@
             <div class="card-aceite col-xs-12 col-lg-4">
                 <h3>Crema Corporal</h3>
                 <img src="../img/crema corporal cbd.jpg" alt="">
-                <h4>Lorem ipsum dolor sit amet.</h4>
+                <h4>Crema corporal de cannabis 200 ml.
+                    Es ideal para relajar la musculatura y aliviar las zonas más cansadas de nuestro cuerpo.</h4>
                 <h5>$3500</h5>
                 <div>
                     <button class="botton">Comprar</button>
@@ -70,7 +61,7 @@
             <div class="card-aceite col-xs-12 col-lg-4">
             <h3>Crema Facial</h3>
             <img src="../img/crema facial cbd.jpg" alt="">
-            <h4>Lorem ipsum dolor sit amet.</h4>
+            <h4>Previene el envejecimiento y protege del estrés ambiental. Suave textura que deja la piel sedosa y luminosa.</h4>
             <h5>$4000</h5>
             <div>
                 <button class="botton">Comprar</button>
@@ -82,19 +73,20 @@
 <!-- pie de pagina -->
 <footer class="container">
     <div class="row">
-        <p class="col-12">Copyright © Info Cannabis 2023 Todos los derechos reservados.</p>
+        <p class="copyright col-12">Copyright © Natural Mystic 2023 Todos los derechos reservados.</p>
     </div>
-
-    <div class="row">
-        <div class="col-6">
-            <p>Facebook</p>
-            <p>Instagram</p>
-        </div>   
-    </div>
-        <div class="col-6">
-                    <input type="text">
-                    <button class="botton">Suscribirse</button>
+        <div class="row redes">
+            <div class="col-6">
+                <button class="btn--boton1">Facebook</button>
+            </div>
+            <div>
+                <button class="btn--boton2">Instagram</button>
+            </div>   
         </div>
+            <div class="col-6">
+                <input type="text">
+                <button class="botton">Suscribirse</button>
+            </div>
 </footer>
     </body>
 </html>
